Rollback to Java 8 for training class.